--- a/istore/client/src/components/argon-dashboard-react-master/views/examples/Profile.css
+++ b/istore/client/src/components/argon-dashboard-react-master/views/examples/Profile.css
@@ -13,8 +13,8 @@
 
 .user-profile .card-profile-image-change {
     position: absolute;
-    margin-top: 110px;
-    margin-left: -100px;
+    margin-top: 120px;
+    /* margin-left: -100px; */
     z-index: 10;
 }
 
@@ -31,4 +31,12 @@
 .user-profile .card-profile-image-change i:hover {
     cursor: pointer;
     margin-top: -1px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .user-profile .card-profile-image-change {
+        position: absolute;
+        z-index: 10;
+        left: 45%;
+    }
 }
