--- a/istore/client/src/components/argon-dashboard-react-master/views/examples/StoreManage.css
+++ b/istore/client/src/components/argon-dashboard-react-master/views/examples/StoreManage.css
@@ -1,8 +1,8 @@
-.table-flush-custom .th-custom,
+/* .table-flush-custom .th-custom,
 .table-flush-custom .td-custom {
     max-width: 200px;
     overflow: hidden;
-}
+} */
 
 .table-flush-custom .is-active-true {
     color: rgb(36, 233, 36);
