--- a/istore/client/src/components/istore/DropdownUser.css
+++ b/istore/client/src/components/istore/DropdownUser.css
@@ -12,15 +12,15 @@
     border-right: 15px solid transparent;
     border-bottom: 15px solid #fff;
     position: absolute;
-    right: 10px;
+    right: 5px;
 }
 
 .dropdown-user-body-main {
     width: 270px;
     padding: 0.5em 0;
     position: absolute;
-    top: 60px;
-    right: 10px;
+    top: 55px;
+    right: 0px;
     z-index: 104;
     background-color: #fff;
     border-radius: 4px;
@@ -28,7 +28,7 @@
 }
 
 .dropdown-user-body-content {
-    padding: 0.5em 0.5em;
+    padding: 10px 0.5em;
 }
 
 .dropdown-user-body-content-logout:hover {
@@ -36,13 +36,13 @@
 }
 
 .dropdown-user-body-content a.dropdown-user-body-content-link {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
 .dropdown-user-body-content a.dropdown-user-body-content-link:hover {
-  text-decoration: none;
-  color: blue;
+    text-decoration: none;
+    color: blue;
 }
 
 .dropdown-user-body-content-imgage {
@@ -54,40 +54,40 @@
 }
 
 .valid-feedback {
-  display: none;
-  width: 100%;
-  margin-top: 0.15rem;
-  font-size: 80%;
-  color: #28a745;
+    display: none;
+    width: 100%;
+    margin-top: 0.15rem;
+    font-size: 80%;
+    color: #28a745;
 }
 
 .invalid-feedback {
-  display: none;
-  width: 100%;
-  margin-top: 0.15rem;
-  font-size: 80%;
-  color: #dc3545;
+    display: none;
+    width: 100%;
+    margin-top: 0.15rem;
+    font-size: 80%;
+    color: #dc3545;
 }
 
 .feedback {
-  text-align: center;
-  font-size: 12px;
+    text-align: center;
+    font-size: 12px;
 }
 
 .feedback.error {
-  color: #dc3545;
+    color: #dc3545;
 }
 
 .feedback.success {
-  color: #28a745;
+    color: #28a745;
 }
 
 .valid {
-  border-color: #28a745 !important;
+    border-color: #28a745 !important;
 }
 
 .invalid {
-  border-color: #dc3545 !important;
+    border-color: #dc3545 !important;
 }
 
 .sign-in:hover {
@@ -95,7 +95,7 @@
 }
 
 .sign-up:hover {
-    background-color: #FFF /* 34c9eb; */
+    background-color: #fff; /* 34c9eb; */
 }
 
 .dropdown-user-body-content-divide {
@@ -103,211 +103,229 @@
 }
 
 .ui.buttons {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  font-size: 0em;
-  vertical-align: baseline;
-  margin: 0em 0.25em 0em 0em;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    font-size: 0em;
+    vertical-align: baseline;
+    margin: 0em 0.25em 0em 0em;
 }
 .ui.buttons:not(.basic):not(.inverted) {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 .ui.button {
-  cursor: pointer;
-  display: inline-block;
-  min-height: 1em;
-  outline: none;
-  border: none;
-  vertical-align: baseline;
-  background: #E0E1E2 none;
-  color: rgba(0, 0, 0, 0.6);
-  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  margin: 0em 0.25em 0em 0em;
-  padding: 0.78571429em 1.5em 0.78571429em;
-  text-transform: none;
-  text-shadow: none;
-  font-weight: bold;
-  line-height: 1em;
-  font-style: normal;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 0.28571429rem;
-  -webkit-box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-  box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-  transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-  transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, box-shadow 0.1s ease, background 0.1s ease;
-  transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, box-shadow 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-  will-change: '';
-  -webkit-tap-highlight-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    min-height: 1em;
+    outline: none;
+    border: none;
+    vertical-align: baseline;
+    background: #e0e1e2 none;
+    color: rgba(0, 0, 0, 0.6);
+    font-family: "Lato", "Helvetica Neue", Arial, Helvetica, sans-serif;
+    margin: 0em 0.25em 0em 0em;
+    padding: 0.78571429em 1.5em 0.78571429em;
+    text-transform: none;
+    text-shadow: none;
+    font-weight: bold;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 0.28571429rem;
+    -webkit-box-shadow: 0px 0px 0px 1px transparent inset,
+        0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+    box-shadow: 0px 0px 0px 1px transparent inset,
+        0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: opacity 0.1s ease, background-color 0.1s ease,
+        color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
+    transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease,
+        background 0.1s ease, -webkit-box-shadow 0.1s ease;
+    transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease,
+        box-shadow 0.1s ease, background 0.1s ease;
+    transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease,
+        box-shadow 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
+    will-change: "";
+    -webkit-tap-highlight-color: transparent;
 }
 .ui.buttons .button,
 .ui.buttons .or,
 .ui.button {
-  font-size: 1rem;
+    font-size: 1rem;
 }
 .ui.buttons .or {
-  position: relative;
-  width: 0.3em;
-  height: 2.57142857em;
-  z-index: 3;
+    position: relative;
+    width: 0.3em;
+    height: 2.57142857em;
+    z-index: 3;
 }
 
 .ui.buttons .or:before {
-  position: absolute;
-  text-align: center;
-  border-radius: 500rem;
-  content: 'or';
-  top: 50%;
-  left: 50%;
-  background-color: #FFFFFF;
-  text-shadow: none;
-  margin-top: -0.89285714em;
-  margin-left: -0.89285714em;
-  width: 1.78571429em;
-  height: 1.78571429em;
-  line-height: 1.78571429em;
-  color: rgba(0, 0, 0, 0.4);
-  font-style: normal;
-  font-weight: bold;
-  -webkit-box-shadow: 0px 0px 0px 1px transparent inset;
-  box-shadow: 0px 0px 0px 1px transparent inset;
+    position: absolute;
+    text-align: center;
+    border-radius: 500rem;
+    content: "or";
+    top: 50%;
+    left: 50%;
+    background-color: #ffffff;
+    text-shadow: none;
+    margin-top: -0.89285714em;
+    margin-left: -0.89285714em;
+    width: 1.78571429em;
+    height: 1.78571429em;
+    line-height: 1.78571429em;
+    color: rgba(0, 0, 0, 0.4);
+    font-style: normal;
+    font-weight: bold;
+    -webkit-box-shadow: 0px 0px 0px 1px transparent inset;
+    box-shadow: 0px 0px 0px 1px transparent inset;
 }
 .btn {
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
-  .btn {
-    transition: none;
-  }
+    .btn {
+        transition: none;
+    }
 }
 
-.btn:hover, .btn:focus {
-  text-decoration: none;
+.btn:hover,
+.btn:focus {
+    text-decoration: none;
 }
 
-.btn:focus, .btn.focus {
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+.btn:focus,
+.btn.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .disabled,
 :disabled {
-  pointer-events: none !important; 
+    pointer-events: none !important;
 }
 
-.btn.disabled, .btn:disabled {
-  opacity: 0.65;
+.btn.disabled,
+.btn:disabled {
+    opacity: 0.65;
 }
 
 .btn:not(:disabled):not(.disabled) {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 a.btn.disabled,
 fieldset:disabled a.btn {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 .btn-primary:hover,
 .btn-primary:focus {
-  color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
+    color: #fff;
+    background-color: #0069d9;
+    border-color: #0062cc;
 }
 
-.btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+.btn-primary:focus,
+.btn-primary.focus {
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
 }
 
-.btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+.btn-primary.disabled,
+.btn-primary:disabled {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
 }
 
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf;
+    color: #fff;
+    background-color: #0062cc;
+    border-color: #005cbf;
 }
 
-.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
 }
 
 .btn-primary .ink {
-    background-color: #1266f1; 
+    background-color: #1266f1;
 }
 
 .btn-success:hover,
 .btn-success:focus {
-  color: #fff;
-  background-color: #218838;
-  border-color: #1e7e34;
+    color: #fff;
+    background-color: #218838;
+    border-color: #1e7e34;
 }
 
-.btn-success:focus, .btn-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+.btn-success:focus,
+.btn-success.focus {
+    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
 }
 
-.btn-success.disabled, .btn-success:disabled {
-  color: #fff;
-  background-color: #28a745;
-  border-color: #28a745;
+.btn-success.disabled,
+.btn-success:disabled {
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
 }
 
-.btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
+.btn-success:not(:disabled):not(.disabled):active,
+.btn-success:not(:disabled):not(.disabled).active,
 .show > .btn-success.dropdown-toggle {
-  color: #fff;
-  background-color: #1e7e34;
-  border-color: #1c7430;
+    color: #fff;
+    background-color: #1e7e34;
+    border-color: #1c7430;
 }
 
-.btn-success:not(:disabled):not(.disabled):active:focus, .btn-success:not(:disabled):not(.disabled).active:focus,
+.btn-success:not(:disabled):not(.disabled):active:focus,
+.btn-success:not(:disabled):not(.disabled).active:focus,
 .show > .btn-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
 }
 
 .btn-success .ink {
-    background-color: #1b721a; 
+    background-color: #1b721a;
 }
 
 .btn-fb {
-    background-color: #1976D2!important;
-    color: #fff!important;
+    background-color: #1976d2 !important;
+    color: #fff !important;
 }
 
 .btn-gplus {
-    background-color: #dd4b39!important;
-    color: #fff!important;
+    background-color: #dd4b39 !important;
+    color: #fff !important;
 }
 
 .forgot-password {
