--- a/istore/client/src/components/HomeIndex.css
+++ b/istore/client/src/components/HomeIndex.css
@@ -129,17 +129,13 @@ img.zoom-icon.right {
         height: 30em;
     }
 
-    .app > .footer {
+    .app  .footer {
         display: block;
     }
 
-    .app > .footer > .footer-body {
-        /* display: none; */
-    }
-
     .dropdown-user {
-        position: absolute;
-        top: 3.4em;
-        right: 10px;
+        position: fixed;
+        top: 3.2em;
+        right: 1em;
     }
 }
