--- a/istore/client/src/components/istore/Field.css
+++ b/istore/client/src/components/istore/Field.css
@@ -5,7 +5,6 @@
 
 .field-filter {
     padding-left: 1em;
-    padding-right: 1em;
 }
 
 .field-filter > .row {
@@ -45,7 +44,9 @@
 
 .field-results {
     margin: 0;
-    padding: 1em 1em;
+    padding-left: 1em;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 .field-results > .row {
@@ -56,7 +57,6 @@
     color: #4caf50;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 1.2em;
 }
 
 .field-results-filter {
