--- a/istore/client/src/components/istore/Logo.css
+++ b/istore/client/src/components/istore/Logo.css
@@ -39,11 +39,11 @@
 
 .header {
     width: 100%;
-    height: 3.0em;
+    height: 40px;
     background-color: #4caf50;
     display: flex;
     flex-direction: row;
-    padding: 0.2em 0;
+    padding: 2px 0;
 }
 
 .header:hover {
@@ -64,7 +64,7 @@
 
 .logo-image {
     height: 100%;
-    padding: 0.4em;
+    padding: 5px;
 }
 
 .logo-title {
