--- a/istore/client/src/components/istore/ProductDetail.css
+++ b/istore/client/src/components/istore/ProductDetail.css
@@ -74,6 +74,11 @@
     padding: 0 20px 20px;
 }
 
+.product-detail-product-body-title {
+    padding-top: 1em;
+    padding-bottom: 0.5em;
+}
+
 .product-detail-product-body-title h4 {
     color: red !important;
     text-transform: uppercase;
