--- a/istore/client/src/components/istore/DropdownUser.css
+++ b/istore/client/src/components/istore/DropdownUser.css
@@ -132,7 +132,7 @@
     vertical-align: baseline;
     background: #e0e1e2 none;
     color: rgba(0, 0, 0, 0.6);
-    font-family: "Lato", "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     margin: 0em 0.25em 0em 0em;
     padding: 0.78571429em 1.5em 0.78571429em;
     text-transform: none;
@@ -159,7 +159,7 @@
         box-shadow 0.1s ease, background 0.1s ease;
     transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease,
         box-shadow 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-    will-change: "";
+    will-change: '';
     -webkit-tap-highlight-color: transparent;
 }
 .ui.buttons .button,
@@ -178,7 +178,7 @@
     position: absolute;
     text-align: center;
     border-radius: 500rem;
-    content: "or";
+    content: 'or';
     top: 50%;
     left: 50%;
     background-color: #ffffff;
@@ -356,4 +356,8 @@ span.cancelForgotPassword {
 
 .loading.show {
     display: block !important;
+}
+
+.login-error {
+    font-size: 12px;
 }
