--- a/istore/client/src/components/istore/Field_Results_Item.css
+++ b/istore/client/src/components/istore/Field_Results_Item.css
@@ -38,6 +38,15 @@
     padding-right: 0;
 }
 
+.field-results-item-producer-code {
+    margin-top: -5px;
+    margin-bottom: -2px;
+}
+
+.field-results-item-producer-code {
+    font-size: 0.8em;
+}
+
 .field-results-item-desc-title {
     color: #b40e0e;
     font-weight: bold;
@@ -66,7 +75,7 @@
 .field-results-item-desc-time-up {
     color: #999;
     float: right;
-    font-size: 0.8em;    
+    font-size: 0.8em;
 }
 
 .field-results-item-desc-sub-desc {
@@ -82,8 +91,8 @@
     color: #777777;
 }
 
-.field-results-item-desc-rate-contact{
-    
+.field-results-item-desc-rate-contact {
+    margin-top: -8px;
 }
 
 .field-results-item-desc-rate > img {
